--- a/kafka/docker-compose.yaml
+++ b/kafka/docker-compose.yaml
@@ -37,7 +37,7 @@ services:
     environment:
       POSTGRES_DB: house_warehouse
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_PASSWORD: 12345678
     ports:
       - "5432:5432"
     volumes:
